# rsfedml

./: README.md  dataset.py  fedarated_dataset.py  requirements.txt
code/classification/remote-sensing/centralized/: centralized.py  resnet.ipynb
code/classification/remote-sensing/fedavg/: README.md  pyproject.toml
code/classification/remote-sensing/fedavg/fedavg/: client_app.py  server_app.py  task.py
code/classification/remote-sensing/fedentropy/: README.md  pyproject.toml
code/classification/remote-sensing/fedentropy/fedentropy/: client_app.py  server_app.py  task.py
code/classification/remote-sensing/fedrr/: pyproject.toml
code/classification/remote-sensing/fedrr/fedrr/: client_app.py  server_app.py
code/classification/remote-sensing/noniid/fedavg/: README.md  pyproject.toml
code/classification/remote-sensing/noniid/fedavg/fedavg/: client_app.py  server_app.py  task.py
code/classification/remote-sensing/noniid/fedentropy/: README.md  pyproject.toml
code/classification/remote-sensing/noniid/fedentropy/fedentropy/: __init__.py  client_app.py  server_app.py  task.py
code/classification/remote-sensing/noniid/fedrr/: README.md
code/classification/remote-sensing/quickfed/: README.md  pyproject.toml
code/classification/remote-sensing/quickfed/quickfed/: client_app.py
code/classification/remote-sensing/quickfedrandom/: README.md  pyproject.toml
code/classification/remote-sensing/quickfedrandom/quickfedrandom/: task.py
code/clustering/remote-sensing/centralized/: autoencoder.py
data/: README.md
(+8 files in other folders)
