[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedentropy"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.1",
    "flwr-datasets[vision]>=0.3.0",
    "tensorflow>=2.11.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "devadatta"

[tool.flwr.app.components]
serverapp = "fedentropy.server_app:app"
clientapp = "fedentropy.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 35
local-epochs = 5
batch-size = 32
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
